<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/labelDeviceModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/padding_small"
        android:layout_marginTop="@dimen/padding_small"
        android:text="@string/device_board" />

    <TextView
        android:id="@+id/contentDeviceModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_small"
        android:layout_marginTop="@dimen/padding_small"
        android:text="@string/device_board" />

    <ScrollView
        android:id="@+id/logLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnInstall"
        android:layout_alignLeft="@+id/labelLog"
        android:layout_below="@+id/labelLog"
        android:layout_marginRight="@dimen/padding_small" >

        <TextView
            android:id="@+id/txtLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />
    </ScrollView>


    <Button
        android:id="@+id/btnUninstall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnInstall"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btnInstall"
        android:text="@string/uninstall" />

    <Button
        android:id="@+id/btnInstall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnUninstall"
        android:layout_alignLeft="@+id/logLayout"
        android:layout_alignParentRight="true"
        android:text="@string/install"
        android:layout_marginRight="@dimen/padding_small"/>

    <TextView
        android:id="@+id/labelApiStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/labelDeviceModel"
        android:layout_below="@+id/labelDeviceModel"
        android:text="@string/api_status" />

    <TextView
        android:id="@+id/txtApiStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtDeviceModel"
        android:layout_below="@+id/txtDeviceModel"
        android:text="@string/nd" />

  <TextView
        android:id="@+id/labelLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:text="@string/log"
      android:layout_alignLeft="@+id/labelApiStatus"
      android:layout_below="@+id/labelApiStatus" />

    <TextView
        android:id="@+id/txtDeviceModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/labelDeviceModel"
        android:layout_alignBottom="@+id/labelDeviceModel"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/labelDeviceModel"
        android:text="@string/nd" />

</RelativeLayout>
